# tanks

./: .gitignore  CMakeLists.txt  README.md  ball.cpp  ball.hpp  main.cpp  map.csv  maps.xlsx  tank.hpp
ECS/: CMakeLists.txt  main.cpp  psevdoCode.txt  schemeComponents.txt  schemeSystems.txt
ECS/flecs-master/: flecs.c  flecs.h
ECS/flecs-master/include/flecs/addons/cpp/utils/: array.hpp  builder.hpp  enum.hpp  function_traits.hpp  iterable.hpp  node_builder.hpp  signature.hpp  string.hpp  stringstream.hpp  utils.hpp
ECS/flecs-master/src/addons/expr/: utils.c
ECS/init/: components.h  config.h  initWorld.h  utils.h
ECS/menu/: initMenu.h  menu.h  menuSistems.h
ECS/plans/: mindMap.txt
ECS/systems/collision/: collision.h  collisional.h
ECS/systems/control/: control.h
ECS/systems/moving/: moving.h  movingSystem.h
ECS/systems/render/: render.h  renderSystem.h
ECS/utils/: initWorld.h
OOP/: .gitignore  CMakeLists.txt  main.cpp
OOP/libs/: fire.cpp  tank.cpp  tankUser.cpp  wallWood.cpp
OOP/libs/headers/: fire.hpp  tank.hpp  tankEnemy.hpp  tankEnemyAi.hpp  wall.hpp  wallMetal.hpp  wallWood.hpp
OOP/plans/: roadMap.txt
libs/: bullet.cpp  fire.cpp  tank.cpp  tankEnemy.cpp  tankEnemyAi.cpp  wall.cpp  wallMetal.cpp  wallWood.cpp  world.cpp
libs/headers/: bullet.hpp  fire.hpp  tank.hpp  tankUser.hpp  world.hpp
plans/: roadMap.txt
